# ChanelStrip

./: CMakeLists.txt  README.txt  create_installer.sh
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Console/: ConsoleEditor.cpp  ConsoleEditor.h  ConsoleProcessor.cpp  ConsoleProcessor.h
Source/ConsoleMode/: InstanceRegistry.cpp  InstanceRegistry.h
Source/DSP/: EQProcessor.cpp  EQProcessor.h  WavetableManager.cpp  WavetableManager.h
Source/SharedMemory/: SharedParameterBlock.cpp  SharedParameterBlock.h
build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build_release/JUCE/: JUCEExportConfig.cmake  cmake_install.cmake
build_release/JUCE/modules/: cmake_install.cmake
build_release/JUCE/tools/: .ninja_deps  .ninja_log  CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  build.ninja  cmake_install.cmake
build_release/JUCE/tools/modules/: cmake_install.cmake
build_release/SteinbachChanelStrip_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build_release/SteinbachChanelStrip_artefacts/JuceLibraryCode/Release/: Defs.txt
build_release/SteinbachChanelStrip_artefacts/JuceLibraryCode/SteinbachChanelStrip_AU/: Info.plist
build_release/SteinbachChanelStrip_artefacts/JuceLibraryCode/SteinbachChanelStrip_Standalone/: Info.plist
build_release/SteinbachChanelStrip_artefacts/JuceLibraryCode/SteinbachChanelStrip_VST3/: Info.plist
build_release/SteinbachChanelStrip_artefacts/Release/AU/Steinbach Chanel Strip.component/Contents/: Info.plist
build_release/SteinbachChanelStrip_artefacts/Release/AU/Steinbach Chanel Strip.component/Contents/MacOS/: Steinbach Chanel Strip
build_release/SteinbachChanelStrip_artefacts/Release/Standalone/Steinbach Chanel Strip.app/Contents/: Info.plist
build_release/SteinbachChanelStrip_artefacts/Release/VST3/Steinbach Chanel Strip.vst3/Contents/: Info.plist
build_release/SteinbachChanelStrip_artefacts/Release/VST3/Steinbach Chanel Strip.vst3/Contents/MacOS/: Steinbach Chanel Strip
build_release/SteinbachChanelStrip_artefacts/Release/VST3/Steinbach Chanel Strip.vst3/Contents/Resources/: moduleinfo.json
build_release/SteinbachChanelStrip_artefacts/Release/VST3/Steinbach Chanel Strip.vst3/Contents/_CodeSignature/: CodeResources
build_release/SteinbachConsole_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build_release/SteinbachConsole_artefacts/JuceLibraryCode/Release/: Defs.txt
build_release/SteinbachConsole_artefacts/JuceLibraryCode/SteinbachConsole_Standalone/: Info.plist
build_release/SteinbachConsole_artefacts/JuceLibraryCode/SteinbachConsole_VST3/: Info.plist
build_release/SteinbachConsole_artefacts/Release/Standalone/Steinbach Console.app/Contents/: Info.plist
build_release/SteinbachConsole_artefacts/Release/VST3/Steinbach Console.vst3/Contents/: Info.plist
build_release/SteinbachConsole_artefacts/Release/VST3/Steinbach Console.vst3/Contents/MacOS/: Steinbach Console
build_release/SteinbachConsole_artefacts/Release/VST3/Steinbach Console.vst3/Contents/Resources/: moduleinfo.json
build_release/vst3_helpers/SteinbachChanelStrip/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  shared_defs_Release.txt  shared_incs_Release.txt  vst3_helper
build_release/vst3_helpers/SteinbachConsole/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  shared_defs_Release.txt  shared_incs_Release.txt  vst3_helper
installer/: SteinbachChanelStrip.nsi
(+1 files in other folders)
